--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -39,35 +39,8 @@ jobs:
           node-version: '14'
       - name: Install dependencies
         run: npm install
-      - name: Build Markdown and Update HTML
-        run: |
-          for file in *.md; do
-            # Extract metadata from the Markdown file
-            title=$(grep "^title:" "$file" | cut -d ":" -f 2 | sed 's/^[[:space:]]*//;s/[[:space:]]*$//')
-            date=$(grep "^date:" "$file" | cut -d ":" -f 2 | sed 's/^[[:space:]]*//;s/[[:space:]]*$//')
-            content=$(awk '/^---/ {if (++n == 2) exit; next} n' "$file")
-
-            # Truncate content to 50 words
-            truncated_content=$(echo "$content" | awk '{for(i=1;i<=50;i++)printf $i" "; print "..."}')
-
-            # Generate HTML post content
-            post_html="<div class=\"post\">
-    <p>$date</p>
-    <a href=\"$file\"><h3>$title</h3></a>
-    <p>$truncated_content</p>
-</div>"
-
-            # File path of the HTML file
-            html_file="your_file_path.html"
-
-            # Find the line number where the "<h2>Posts</h2>" tag is located
-            line_number=$(grep -n "<h2>Posts</h2>" "$html_file" | cut -d ":" -f 1)
-
-            # Add the post HTML content after the line containing "<h2>Posts</h2>"
-            sed -i "${line_number}a ${post_html}" "$html_file"
-
-            echo "HTML content added for $file."
-          done
+      - name: Mod HTML and build Markdown
+        run: bash ./adder.sh
       - name: Upload artifact
         uses: actions/upload-artifact@v2
         with:
