--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -42,7 +42,7 @@ jobs:
       - name: Mod HTML and build Markdown
         run: bash ./adder.sh
       - name: Upload artifact
-        uses: actions/upload-artifact@v2
+        uses: actions/upload-pages-artifact@v3
         with:
           # Upload entire repository
           path: '.'
